# haproxy-protocol

./: .codespellrc  Cargo.toml  README.md  clippy.toml
.github/workflows/: clippy.yml  codespell.yml  rust_build.yml
src/: lib.rs  parse.rs
